Fix: logo wrapping on mobile

--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   letter-spacing: 0;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 1.5rem;
   text-transform: lowercase;
   color: var(--text-color);
   white-space: nowrap;
@@ -51,57 +51,59 @@
     }
   }
 
-  &:hover,
-  &:focus {
-    .expand {
-      max-width: 300px;
-      transition: max-width .175s cubic-bezier(0, 0, 0, 1);
-
-      span {
-        opacity: 1;
-        transform: translate(0, 0);
-
-        &:nth-of-type(1) {
-          transition: all $logo-transition-duration linear;
-        }
-
-        &:nth-of-type(2) {
-          transition: all $logo-transition-duration .025s linear;
-        }
-
-        &:nth-of-type(3) {
-          transition: all $logo-transition-duration .05s linear;
-        }
-
-        &:nth-of-type(4) {
-          transition: all $logo-transition-duration .075s linear;
-        }
-
-        &:nth-of-type(5) {
-          transition: all $logo-transition-duration .1s linear;
-        }
-
-        &:nth-of-type(6) {
-          transition: all $logo-transition-duration .125s linear;
-        }
-
-        &:nth-of-type(7) {
-          transition: all $logo-transition-duration .150s linear;
-        }
-
-        &:nth-of-type(8) {
-          transition: all $logo-transition-duration .175s linear;
-        }
-      }
-
-      &.last {
+  @media screen and (min-width: 410px) { 
+    &:hover,
+    &:focus {
+      .expand {
+        max-width: 13rem;
+        transition: max-width .175s cubic-bezier(0, 0, 0, 1);
+  
         span {
+          opacity: 1;
+          transform: translate(0, 0);
+  
           &:nth-of-type(1) {
-            transition: all $logo-transition-duration .175s linear;
+            transition: all $logo-transition-duration linear;
           }
   
           &:nth-of-type(2) {
-            transition: all $logo-transition-duration .2s linear;
+            transition: all $logo-transition-duration .025s linear;
+          }
+  
+          &:nth-of-type(3) {
+            transition: all $logo-transition-duration .05s linear;
+          }
+  
+          &:nth-of-type(4) {
+            transition: all $logo-transition-duration .075s linear;
+          }
+  
+          &:nth-of-type(5) {
+            transition: all $logo-transition-duration .1s linear;
+          }
+  
+          &:nth-of-type(6) {
+            transition: all $logo-transition-duration .125s linear;
+          }
+  
+          &:nth-of-type(7) {
+            transition: all $logo-transition-duration .150s linear;
+          }
+  
+          &:nth-of-type(8) {
+            transition: all $logo-transition-duration .175s linear;
+          }
+        }
+  
+        &.last {
+          span {
+            &:nth-of-type(1) {
+              transition: all $logo-transition-duration .175s linear;
+            }
+    
+            &:nth-of-type(2) {
+              transition: all $logo-transition-duration .2s linear;
+            }
           }
         }
       }
